...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cmput301f17t07.ingroove.avehabit.AddHabitActivity">


    <EditText
        android:id="@+id/add_habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/habit_name_hint"
        android:inputType="textPersonName" />

...
        android:id="@+id/add_date_pick_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_habit_start" />

    <Button
        android:id="@+id/add_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_habit" />
    <Button
        android:id="@+id/add_cancel_btn"
        android:layout_width="match_parent"
...
